RESOLVED FIXED182583
[Curl] Cookie Database has some warnings when compiled in clang
https://bugs.webkit.org/show_bug.cgi?id=182583
Summary [Curl] Cookie Database has some warnings when compiled in clang
Christopher Reid
Reported 2018-02-07 15:01:23 PST
Here are the warnings: - Unused parameters in CookieJarCurlDatabase and CookieJarDB. - The NetworkStorageSessionCurl constructor has a different order than its header. - I accidentally had a '#pragma once' in CookieJarCurlDatabase.cpp. - CookieJarDB.cpp(175,26): warning : missing field 'st_ino' initializer [-Wmissing-field-initializers]
Attachments
patch (5.44 KB, patch)
2018-02-07 15:08 PST, Christopher Reid
no flags
Christopher Reid
Comment 1 2018-02-07 15:08:45 PST
WebKit Commit Bot
Comment 2 2018-02-07 16:39:22 PST
Comment on attachment 333319 [details] patch Clearing flags on attachment: 333319 Committed r228250: <https://trac.webkit.org/changeset/228250>
WebKit Commit Bot
Comment 3 2018-02-07 16:39:23 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-02-07 16:41:03 PST
Note You need to log in before you can comment on or make changes to this bug.