[Curl] Cookie Database has some warnings when compiled in clang https://bugs.webkit.org/show_bug.cgi?id=182583

Patch by Christopher Reid <chris.reid@sony.com> on 2018-02-07
Reviewed by Alex Christensen.

No new tests, no change in behavior.

Fixing unused-parameter, missing-field-initializers, reorder, and pragma-once-outside-header warnings.

* platform/network/NetworkStorageSession.h:
* platform/network/curl/CookieJarCurlDatabase.cpp:
* platform/network/curl/CookieJarDB.cpp:
* platform/network/curl/NetworkStorageSessionCurl.cpp:

Canonical link: https://commits.webkit.org/198387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228250 268f45cc-cd09-0410-ab3c-d52691b4dbfc