Source/WebCore/platform/network/NetworkStorageSession.h
@@ -162,10 +162,10 @@ private:
     GRefPtr<GCancellable> m_persisentStorageCancellable;
 #endif
 #elif USE(CURL)
+    RefPtr<NetworkingContext> m_context;
+
     UniqueRef<CookieJarCurl> m_cookieStorage;
     mutable CookieJarDB m_cookieDatabase;
-
-    RefPtr<NetworkingContext> m_context;
 #else
     RefPtr<NetworkingContext> m_context;
 #endif
